logs/tetoolkit.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/TEToolkit'...
Compiling './lib/python3.5/site-packages/TEToolkit/GeneFeatures.py'...
***   File "./lib/python3.5/site-packages/TEToolkit/GeneFeatures.py", line 64
    raise ValueError, "The attribute string seems to contain mismatched quotes."
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/TEToolkit/IO'...
Compiling './lib/python3.5/site-packages/TEToolkit/IO/FeatIO.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (FeatIO.py, line 547)
Compiling './lib/python3.5/site-packages/TEToolkit/IO/ReadInputs.py'...
***   File "./lib/python3.5/site-packages/TEToolkit/IO/ReadInputs.py", line 93
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/TEToolkit/ShortRead'...
Listing './lib/python3.5/site-packages/TEToolkit-1.5.1.egg-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pysam'...
Listing './lib/python3.5/site-packages/pysam/include'...
Listing './lib/python3.5/site-packages/pysam/include/bcftools'...
Listing './lib/python3.5/site-packages/pysam/include/htslib'...
Listing './lib/python3.5/site-packages/pysam/include/htslib/htslib'...
Listing './lib/python3.5/site-packages/pysam/include/samtools'...
Listing './lib/python3.5/site-packages/pysam/include/samtools/win32'...
Listing './lib/python3.5/site-packages/pysam-0.13.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
